[project]
name = "coretex"
version = "1.0.153"
authors = [
  { name="Duško Mirković", email="dmirkovic@coretex.ai" }
]
maintainers = [
  { name="Duško Mirković", email="dmirkovic@coretex.ai" },
  { name="Igor Perić", email="igor@coretex.ai" },
  { name="Jovica Zarić", email="jzaric@coretex.ai" },
  { name="Darko Zarić", email="dzaric@coretex.ai" },
  { name="Bogdan Tintor", email="btintor@coretex.ai" },
  { name="Alex Maslennikov", email="alex@coretex.ai" },
]

description = "A package for AI experiment tracking, infrastructure and dataset management using Coretex.ai platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "inflection",
  "pillow",
  "numpy<2",
  "scikit-image",
  "shapely",
  "protobuf~=3.19.0",
  "typed-argument-parser",
  "typing-extensions",
  "psutil",
  "py3nvml",
  "watchdog",
  "gitpython",
  "pyyaml==6.0.1",
  "click",
  "tabulate",
  "inquirer",
  "docker",
  "cryptography",
  "pycryptodome"
]

[project.urls]
"Homepage" = "https://coretex.ai"
"Documentation" = "https://docs.coretex.ai/"
"Python API" = "https://coretexpylib.coretex.ai/"
"Source" = "https://github.com/coretex-ai/coretexpylib"

[tool.setuptools.packages.find]
include = ["coretex*"]
exclude = ["tests*", "docs_images*", "doxygen-awesome-css*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "resources/*"]

[project.scripts]
coretex = "coretex.cli.main:cli"
