[project]
name = "coretex"
version = "1.0.183"
authors = [
  { name="Duško Mirković", email="dmirkovic@coretex.ai" }
]
maintainers = [
  { name="Duško Mirković", email="dmirkovic@coretex.ai" },
  { name="Igor Perić", email="igor@coretex.ai" },
  { name="Jovica Zarić", email="jzaric@coretex.ai" },
  { name="Darko Zarić", email="dzaric@coretex.ai" },
  { name="Bogdan Tintor", email="btintor@coretex.ai" },
  { name="Alex Maslennikov", email="alex@coretex.ai" },
]

description = "A package for AI experiment tracking, infrastructure and dataset management using Coretex.ai platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.32.3",
  "inflection>=0.5.1",
  "pillow>=10.2.0",
  "numpy<2",
  "scikit-image>=0.21.0",
  "shapely==2.0.5",
  "typed-argument-parser>=1.10.1",
  "typing-extensions>=4.12.2",
  "psutil>=6.0.0",
  "py3nvml>=0.2.7",
  "watchdog>=4.0.2",
  "gitpython>=3.1.43",
  "pyyaml==6.0.2",
  "click>=8.1.7",
  "tabulate>=0.9.0",
  "inquirer>=3.4.0",
  "cryptography>=43.0.0",
  "pycryptodome>=3.20.0",
  "onnxruntime>=1.16.3",
  "ezkl>=12.0.1"
]

[project.urls]
"Homepage" = "https://coretex.ai"
"Documentation" = "https://docs.coretex.ai/"
"Python API" = "https://coretexpylib.coretex.ai/"
"Source" = "https://github.com/coretex-ai/coretexpylib"

[tool.setuptools.packages.find]
include = ["coretex*"]
exclude = ["tests*", "docs_images*", "doxygen-awesome-css*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "resources/*"]

[project.scripts]
coretex = "coretex.cli.main:cli"
